STANBOL-1094: Migrated entityhub.jersey to work in new environment
git-svn-id: https://svn.apache.org/repos/asf/stanbol/branches/commons-ng@1497076 13f79535-47bb-0310-9956-ffa450edef68